--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
+        google()  // Google's Maven repository
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.google.gms:google-services:4.3.2'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,9 +17,8 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        
+        google()  // Google's Maven repository
     }
 }
 
