--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
                   android:screenOrientation="landscape"
                   android:configChanges="orientation|keyboardHidden"/>
 
+        <activity android:name=".GameActivity"
+            android:screenOrientation="landscape"/>
+
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
